samples/_failures_safe/1761223535_16f570_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5b3dada.c: In function ‘main’:
./samples/SAFE/__tmp_a5b3dada.c:128:9: error: expected declaration or statement at end of input
  128 |         printf("Cannot multiply: dimension mismatch\n");
      |         ^~~~~~
./samples/SAFE/__tmp_a5b3dada.c:128:9: error: expected declaration or statement at end of input
